--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="text_2">Explore now</string>
     <string name="text_3">Here the list</string>
     <string name="text_4">Description</string>
+    <string name="nightmode">Change Mode</string>
 </resources>
